2024-08-10  hwpplayer1  <hwpplayer1@debian>

	* c-basic/C.pdf: Dersler C Temel kursundan itibaren yeniden başlatıldı. 

2024-07-26  hwpplayer1  <hwpplayer1@debian>

	* c-basic/C.pdf: Fonksiyonların Parametre Değişkenleri page 27

	* c-basic/global_variable_2.c (main): global variable and local variable example

2024-07-17  hwpplayer1  <hwpplayer1@debian>

	* c-basic/C.pdf: Global Değişkenlerin Faaliyet Alanı sayfa 26

2024-07-16  hwpplayer1  <hwpplayer1@debian>

	* c-basic/C.pdf: Yerel Değişkenlerin Faaliyet Alanları  sayfa 25 

	* c-basic/C.pdf: Değişkenlerin Faaliyet Alanları (Scope) sayfa 24

2024-06-30  hwpplayer1  <hwpplayer1@debian>

	* c-basic/C.pdf: sayfa 22 Fonksiyonların Geri Dönüş Değerleri (return value)

	* c-basic/float_double.c: float double example

	* c-basic/hex_scanf.c: hex scanf example

	* c-basic/scanf_2.c: scanf two numbers

	* c-basic/scanf.c: Scanf example

	* c-basic/printf.c: printf example

	* c-basic/foo.c: Foo example

	* c-basic/helloworld.c: hello world example

2024-02-19  Mert Gör  <mertgor@masscollabs.xyz>

	* c-basic/C.pdf: Fonksiyonların Parametre Değişkenleri sayfa 27'deyiz

	* c-basic/global.variable.c: C'de  derleme  işleminin  bir  yönü  vardır.  Bu  yön  yukarıdan  aşağıya  doğrudur.  Derleyicinin  önce  değişkenin 
bildirimini görmesi gerekir. Bu nedenle bir global değişkeni aşağıda bildirip daha yukarıda kullanamayız. 

	* c-basic/local.variable.c: Bir global değişkenle aynı isimli yerel değişkenler tanımlanabilir. Çünkü bunlar farklı faaliyet alanlarına sahiptir. 
Tabi  ilgili  blokta  bu  değişken  ismi  kullanıldığında  dar  faaliyet  alanaına  sahip  olana  (yani  yerel  olana)  erişilir. 


	* c-basic/global.variable.scope.c: Bildirimleri fonksiyonların dışında yapılan değişkenlere global değişkenler denir. Global değişkenler dosya faaliyet 
alanına (file scope) sahiptir. Yani tüm fonksiyonlarda tanınırlar. 
