@@ -1,0 +1,6 @@
+#include <stdio.h>
+
+int main(){
+  printf("example hello world\n");
+  return 0;
+}
